WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191226
[iOS] Changing view scale sometimes does not zoom the page to the new initial scale when the page is zoomed in when ignoring meta viewport
https://bugs.webkit.org/show_bug.cgi?id=191226
Summary
[iOS] Changing view scale sometimes does not zoom the page to the new initial...
Wenson Hsieh
Reported
2018-11-02 23:54:47 PDT
<
rdar://problem/45781765
>
Attachments
Patch
(12.34 KB, patch)
2018-11-03 17:39 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Typo fix
(12.34 KB, patch)
2018-11-03 17:46 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-11-03 17:39:46 PDT
Created
attachment 353786
[details]
Patch
Wenson Hsieh
Comment 2
2018-11-03 17:46:09 PDT
Created
attachment 353787
[details]
Typo fix
WebKit Commit Bot
Comment 3
2018-11-05 11:12:47 PST
Comment on
attachment 353787
[details]
Typo fix Clearing flags on attachment: 353787 Committed
r237818
: <
https://trac.webkit.org/changeset/237818
>
WebKit Commit Bot
Comment 4
2018-11-05 11:12:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug